test/core/errors/bitmask_types_error/zs/string_bitmask_error.zs
package string_bitmask_error;

bitmask string StringBitmask
{
    NONE      = 0,
    SOMETHING = 1
};
